# g2p_seq2seq_pytorch

./: .gitignore  CODEOWNERS  LICENSE  README.md  pyproject.toml
g2p_seq2seq_pytorch/: __init__.py  g2p.py  main.py
g2p_seq2seq_pytorch/data/infer_data/: dict.phon.txt  dict.word.txt
g2p_seq2seq_pytorch/data/learning_data/: test.phon  test.word  train.phon  train.word  valid.phon  valid.word
g2p_seq2seq_pytorch/transformer/: __init__.py  transformer_g2p.py
scripts/: archived_g2p.py  prepare-g2p.sh  train-and-generate.sh
tests/: conftest.py  test_g2p.py
